@@ -417,3 +417,8 @@
 
 2003-06-30      3.0a8     Minor stats fix.  The date in remailer-stats was
                             sometimes wrong.
+
+2003-??-??      CVS       Don't try to send a message if there are no recipients left.
+                          Set default max-randhops from 20 to 4.
+                          Remix-To chain is limited by max-randhops limit as well.
+                          Messages to more than one remailer are dropped.
